# lazypr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: demo-ghost.tape  demo-review.tape
src/: cli.rs  main.rs
src/commands/: ghost.rs  impact.rs  inbox.rs  mod.rs  notes.rs  resolve.rs  review.rs  split.rs  stats.rs
src/core/: errors.rs  mod.rs  types.rs
src/core/analyzer/: file_classifier.rs  ghost.rs  mod.rs
src/core/differ/: classifier.rs  heatmap.rs  interdiff.rs  mod.rs  pipeline.rs  semantic.rs  three_color.rs
src/core/git/: blame.rs  branch.rs  diff.rs  log.rs  mod.rs  status.rs
src/core/graph/: dependency.rs  impact.rs  mod.rs  scc.rs  topological.rs
src/core/parser/: generic.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/core/splitter/: algorithm.rs  executor.rs  mod.rs  validator.rs
src/remote/: github.rs  gitlab.rs  mod.rs  provider.rs
src/state/: checklist.rs  config.rs  mod.rs  notes.rs  review_session.rs  store.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs
src/tui/screens/: ghost.rs  help.rs  inbox.rs  mod.rs  review.rs  split.rs
src/tui/widgets/: blame_popup.rs  checklist.rs  diff_view.rs  file_tree.rs  hunk.rs  mod.rs  note_editor.rs  progress_bar.rs  status_bar.rs
tests/: cli.rs
