[package]
name = "lazypr"
version = "0.1.0"
edition = "2021"
description = "The lazygit of pull requests"
license = "MIT"
repository = "https://github.com/grishmin/lazypr"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tui-input = "0.11"
tui-scrollview = "0.6"
git2 = { version = "0.20", features = ["vendored-openssl"] }
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
similar = { version = "2.7", features = ["inline", "text", "bytes"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
petgraph = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
insta = { version = "1.42", features = ["json", "yaml"] }
tempfile = "3.16"
assert_cmd = "2"
